--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -92,3 +92,9 @@ input[type=checkbox]
 .form-group .red {
     color: red;
 }
+
+.progress{
+    background-image: url("/static/tigacrafting/media/default_red.gif");
+    background-repeat: no-repeat;
+    background-position: 36%;
+}
