Anonymized completed reports for experts, send email only to superexperts

--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -119,3 +119,7 @@ input[type=checkbox]
 .messages tbody tr td input[type="text"]{
     width: 100%;
 }
+
+.label-margin{
+    margin-right: 5px;
+}
