--- a/templates/django_messages/compose.html
+++ b/templates/django_messages/compose.html
@@ -5,7 +5,9 @@
 <form action="" method="post">
 {% csrf_token %}
 <table class="messages">
-{{ form.as_table }}
+<tr><th><label for="id_recipient">Recipient:</label></th><td><input id="id_recipient" name="recipient" type="text" /></td></tr>
+<tr><th><label for="id_subject">Subject:</label></th><td><input id="id_subject" maxlength="140" name="subject" type="text" /></td></tr>
+<tr><th><label for="id_body">Body:</label></th><td><textarea cols="55" id="id_body" name="body" rows="12"></textarea></td></tr>
 </table>
 <input type="submit" value="{% trans "Send" %} &raquo;"/>
 </form>
