Added autocomplete to recipients

--- a/templates/django_messages/base.html
+++ b/templates/django_messages/base.html
@@ -21,10 +21,12 @@
             <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
             <link rel="stylesheet" href={% static "tigacrafting/tigacrafting_style.css" %}>
         {% endblock %}
-        <script src={% static "tigacrafting/jquery/1.8.3/jquery-1.8.3.min.js" %}></script>
-        <script src={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.min.js" %}></script>
+        <link rel="stylesheet" href={% static "tigacrafting/tokenize2/tokenize2.min.css" %}>
         <link rel="stylesheet" href="{% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.css" %}">
         <link rel="stylesheet" href="{% static "tigacrafting/font-awesome-4.2.0/css/font-awesome.min.css" %}">
+        <script src={% static "tigacrafting/jquery/1.8.3/jquery-1.8.3.min.js" %}></script>
+        <script src={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.min.js" %}></script>
+        <script src={% static "tigacrafting/tokenize2/tokenize2.min.js" %}></script>
     </head>
     <div class="navbar-wrapper">
         <div class="container">
