Changed a few labels on entolab

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -296,7 +296,7 @@
 
     {% for form in formset %}
         <div class="row row_for_{{ form.instance.report.version_UUID }}">
-            <div class="col-md-10">
+            <div class="col-md-11">
                 <h4><strong>{{ form.instance.report.type|capfirst }}
                     Report {{ form.instance.report.version_UUID }}</strong>
                     {{ form.instance.report.creation_time|date:"d/m/y H:i" }} UTC</h4>
@@ -307,11 +307,12 @@
                 </h4>
             </div>
             {% if request.user.userstat.is_superexpert %}
-            <div class="col-md-1">
+            <!-- Keeping this for future uses, disabled right now -->
+            <!--<div class="col-md-1">
                 <h4>
                     <a href="http://{{ request.META.HTTP_HOST }}{% url 'notifications' %}?user_uuid={{ form.instance.report.user_id }}" target="_blank"><span class="glyphicon glyphicon-envelope" style="color:red;" aria-hidden="true" title="Send notification to owner of the report..."></span></a>
                 </h4>
-            </div>
+            </div>-->
             {% endif %}
         </div>
         {% block report_title_status_row %}
@@ -357,7 +358,7 @@
                     </div>
                     {% if form.instance.simplified_annotation == False %}
                     <div class="form-group">
-                        <label>Public Note:</label>
+                        <label>Public Note (webmap):</label>
                         <div>
                             <button type="button" id="btn_gp_{{ form.instance.id }}" class="btn btn-success btn-sm" title="Nice picture"><span class="glyphicon glyphicon-star-empty"></span></button>
                             <button type="button" id="btn_yes_thorax_pattern_{{ form.instance.id }}" class="btn btn-success btn-sm" title="Yes thorax pattern"><span class="glyphicon glyphicon-thumbs-up"></span></button>
@@ -370,7 +371,7 @@
                         </div>
                     </div>
                     <div class="form-group" {% if request.user.userstat.is_expert %}style="display:none;"{% endif %}>
-                        <label>Message to User:</label>
+                        <label>Private Message to User (app):</label>
                         <div>
                             <button type="button" id="btn_pm_discovery_{{ form.instance.id }}" class="btn btn-success btn-sm" title="Discovery"><span class="glyphicon glyphicon-map-marker"></span></button>
                             <button type="button" id="btn_pm_contact_{{ form.instance.id }}" class="btn btn-success btn-sm" title="Contact"><span class="glyphicon glyphicon-envelope"></span></button>
@@ -441,10 +442,10 @@
                             {{ form.instance.site_certainty_notes }}</div><br>
                     {% endif %}
 
-                    <strong>Public Note:</strong><br>
+                    <strong>Public Note (webmap):</strong><br>
                     <div style="overflow: auto;height: 150px;border:1px solid #333333;padding:2px;">
                         {{ form.instance.edited_user_notes }}</div><br>
-                    <strong>Message To User:</strong><br>
+                    <strong>Private Message To User (app):</strong><br>
                     <div style="overflow: auto;height: 150px;border:1px solid #333333;padding:2px;">
                         {{ form.instance.message_for_user }}</div><br>
                     <strong>Status:</strong><br>
