Report links now show up even if report is not expert validated; if report is not assigned to user message is sent to super_reritja

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -304,9 +304,7 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                {% if form.instance.report.get_is_expert_validated %}
                     <a href="{% url 'single_report_view' form.instance.report.version_UUID %}" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true" title="View validation status"></span></a>
-                {% endif %}
                 </h4>
             </div>
             <div class="col-md-1">
@@ -316,6 +314,12 @@
                             <a href="{% url 'compose_w_data' %}?recipient={{form.instance.report.get_expert_recipients}}&body=http://{{ request.META.HTTP_HOST }}{{form.instance.report.get_single_report_view_link}}&subject=Report {{form.instance.report.version_UUID}}" target="_blank"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="Send email to experts about this report..."></span></a>
                         {% else %}
                             <a href="{% url 'compose_w_data' %}?recipient={{form.instance.report.get_superexpert_completed_recipients}}&body=http://{{ request.META.HTTP_HOST }}{{form.instance.report.get_single_report_view_link}}&subject=Report {{form.instance.report.version_UUID}}" target="_blank"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="Send email to superexperts about this report..."></span></a>
+                        {% endif %}
+                    {% else %}
+                        {% if request.user.userstat.is_superexpert %}
+                            <a href="{% url 'compose_w_data' %}?recipient={{form.instance.report.get_expert_recipients}}&body=http://{{ request.META.HTTP_HOST }}{{form.instance.report.get_single_report_view_link}}&subject=Report {{form.instance.report.version_UUID}}" target="_blank"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="Send email to experts about this report..."></span></a>
+                        {% else %}
+                            <a href="{% url 'compose_w_data' %}?recipient=super_reritja&body=http://{{ request.META.HTTP_HOST }}{{form.instance.report.get_single_report_view_link}}&subject=Report {{form.instance.report.version_UUID}}" target="_blank"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="Send email to superexperts about this report..."></span></a>
                         {% endif %}
                     {% endif %}
                 </h4>
