--- a/tigacrafting/templates/tigacrafting/validation_message_template_ca.html
+++ b/tigacrafting/templates/tigacrafting/validation_message_template_ca.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "tigacrafting/validation_message_template.html" %}
+
+{% block title_block %}
     <title>La teva foto ha estat validada per un expert!</title>
-</head>
-<body>
-    {% if picture_link %}
+{% endblock %}
+
+{% block title_header_block %}
     <h1>La teva foto ha estat validada per un expert!</h1>
-    <img src="{{ picture_link }}" width=100%>
-    {% endif %}
-    {% if map_link %}
-    <p><a href="{{ map_link }}" target="_blank">Enllaç al mapa</a></p>
-    {% endif %}
-    {% if validation_category %}
-    <p><strong>Segons els experts, la teva observació es correspon amb:</strong> {{ validation_category }}</p>
-    {% endif %}
-    {% if expert_note %}
+{% endblock %}
+
+{% block validation_category_block %}
+    <p><strong>La teva observació correspon a:</strong> {{ validation_category }}</p>
+{% endblock %}
+
+{% block map_link_block %}
+    <p><a href="{{ map_link }}" target="_blank">Mira-ho al mapa</a></p>
+{% endblock %}
+
+{% block expert_note_block %}
     <p><strong>Nota de l'expert:</strong> <i>{{ expert_note }}</i></p>
-    {% endif %}
-    {% if message_for_user %}
+{% endblock %}
+
+{% block message_for_user_block %}
     <p><strong>Missatge de l'expert:</strong> <i>{{ message_for_user }}</i></p>
-    {% endif %}
-</body>
-</html>
+{% endblock %}
