--- a/tigacrafting/templates/tigacrafting/validation_message_template_en.html
+++ b/tigacrafting/templates/tigacrafting/validation_message_template_en.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "tigacrafting/validation_message_template.html" %}
+
+{% block title_block %}
     <title>Your picture has been validated by an expert!</title>
-</head>
-<body>
-    {% if picture_link %}
+{% endblock %}
+
+{% block title_header_block %}
     <h1>Your picture has been validated by an expert!</h1>
-    <img src="{{ picture_link }}" width=100%>
-    {% endif %}
-    {% if map_link %}
-    <p><a href="{{ map_link }}" target="_blank">Map link</a></p>
-    {% endif %}
-    {% if validation_category %}
-    <p><strong>According to the experts, your observation is:</strong> {{ validation_category }}</p>
-    {% endif %}
-    {% if expert_note %}
+{% endblock %}
+
+{% block validation_category_block %}
+    <p><strong>Your observation is:</strong> {{ validation_category }}</p>
+{% endblock %}
+
+{% block map_link_block %}
+    <p><a href="{{ map_link }}" target="_blank">View it on the map</a></p>
+{% endblock %}
+
+{% block expert_note_block %}
     <p><strong>Expert note:</strong> <i>{{ expert_note }}</i></p>
-    {% endif %}
-    {% if message_for_user %}
+{% endblock %}
+
+{% block message_for_user_block %}
     <p><strong>Message from the expert:</strong> <i>{{ message_for_user }}</i></p>
-    {% endif %}
-</body>
-</html>
+{% endblock %}
